Fixed product image alignment

--- a/style/shop.css
+++ b/style/shop.css
@@ -178,13 +178,18 @@
 }
 
 .product-image{
-    background: url('https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-13-pro-max-01.jpg');
-    background-position: top;
-    background-size: 100%;
-    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     height: 200px;
-    width: 100%;
+}
+
+.product-image img{
+    
     transition: all 0.15s ease-in-out;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .product,.product-filter,.categories{
@@ -265,8 +270,8 @@
 
 
 @media screen and (min-width:561px) {
-    .product:hover .product-image{
-        background-size: 105%;
+    .product:hover .product-image>img{
+        transform:scale(1.03);
     }
 }
 
